--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
     <link rel="icon" href="images/faviconV2 (1).png" type="image/png">
     <script src="https://cdn.raldoeira.com/code/8300-7591f361-1f40-4703-83cd-63375a20c768"></script>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17958943090"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-17958943090');
+    </script>
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://walkcomfort.app.vercel/">
