--- a/index.html
+++ b/index.html
@@ -368,17 +368,17 @@
 
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Choice 1: Direct Purchase -->
-                <div class="group bg-white rounded-[3rem] p-8 border-2 border-brand-800 hover:border-brand-500 transition-all duration-500 hover:shadow-2xl hover:-translate-y-3 flex flex-col justify-between relative overflow-hidden accent-glow reveal-on-scroll stagger-1">
+                <div class="group bg-white rounded-[3rem] p-8 border-2 border-brand-800 hover:border-brand-500 transition-all duration-500 shadow-lg hover:shadow-2xl hover:-translate-y-3 flex flex-col justify-between relative overflow-hidden accent-glow reveal-on-scroll stagger-1">
                     <div class="absolute top-5 right-5"><span class="bg-brand-950 text-white text-[10px] font-bold px-3 py-1.5 rounded-full uppercase tracking-widest shadow-xl">⭐ Popular</span></div>
                     <div>
                         <h3 class="text-xl font-bold text-brand-950 mb-3">Direct Relief</h3>
-                        <p class="text-sm text-gray-600 leading-relaxed mb-6">Looking for better foot support? Get your Akusoli insoles and start your journey to comfort today.</p>
+                        <p class="text-sm text-gray-600 leading-relaxed mb-6">Looking for better foot support? Get your Akusoli insoles with <strong>70% OFF</strong> and start your journey to comfort today.</p>
                     </div>
                     <a href="https://www.clickrtrckr.com/2LXFFTP/3XLJR4H/?uid=11497" class="w-full py-4 px-6 bg-brand-950 text-white rounded-2xl font-bold text-sm text-center transform transition-all duration-300 group-hover:bg-brand-600 shadow-xl shadow-brand-950/20">Buy Akusoli Now</a>
                 </div>
 
                 <!-- Choice 2: Learn How It Works -->
-                <div class="group bg-white rounded-[2.5rem] p-8 border border-gray-100 hover:border-brand-500 transition-all duration-500 hover:shadow-2xl hover:-translate-y-2 flex flex-col justify-between shadow-sm reveal-on-scroll stagger-2">
+                <div class="group bg-white rounded-[2.5rem] p-8 border-2 border-gray-200 hover:border-brand-500 transition-all duration-500 shadow-lg hover:shadow-2xl hover:-translate-y-2 flex flex-col justify-between reveal-on-scroll stagger-2">
                     <div>
                         <h3 class="text-xl font-bold text-brand-950 mb-3">Learn How Akusoli Works</h3>
                         <p class="text-sm text-gray-600 leading-relaxed mb-6">Discover how our magnetic design is intended to support posture and provide everyday comfort.</p>
@@ -387,7 +387,7 @@
                 </div>
 
                 <!-- Choice 3: Customer Story -->
-                <div class="group bg-white rounded-[2.5rem] p-8 border border-gray-100 hover:border-brand-500 transition-all duration-500 hover:shadow-2xl hover:-translate-y-2 flex flex-col justify-between shadow-sm reveal-on-scroll stagger-3">
+                <div class="group bg-white rounded-[2.5rem] p-8 border-2 border-gray-200 hover:border-brand-500 transition-all duration-500 shadow-lg hover:shadow-2xl hover:-translate-y-2 flex flex-col justify-between reveal-on-scroll stagger-3">
                     <div>
                         <h3 class="text-xl font-bold text-brand-950 mb-3">Read Real Customer Story</h3>
                         <p class="text-sm text-gray-600 leading-relaxed mb-6">See how thousands have added natural comfort to their daily routine with our Japanese-inspired insoles.</p>
